--- a/_posts/2008-01-01-about.md
+++ b/_posts/2008-01-01-about.md
@@ -7,7 +7,7 @@ hide: true
 
 Programmer,Husband and Striker.
 
-I like life.
+I love my family,my wife,work and life.
 
 My Github hobby projects resume: http://felix.github.io/
 
