--- a/_posts/20014-03-02-code.md
+++ b/_posts/20014-03-02-code.md
@@ -10,7 +10,7 @@ sidebar: "<h4>my <a href='https://github.com/felixanya/'>github</a></h4>"
 
 RPG+SLG的顶级多人在线网页游戏.
 
-[code](https://github.com/felixanya) - [web](https://github.com/felixanya) - January 2013 - Tools: JAVA+PHP+AS
+[code](https://github.com/felixanya) - [web](https://github.com/felixanya) - January 2012 - Tools: JAVA+PHP+AS
 
 <br/>
 
@@ -18,6 +18,6 @@ RPG+SLG的顶级多人在线网页游戏.
 
 卡牌类手机网络游戏,实时战斗
 
-[code](https://github.com/felixanya) - [web](https://github.com/felixanya) - January 2014 - Tools: GOLANG
+[code](https://github.com/felixanya) - [web](https://github.com/felixanya) - January 2013 - Tools: GOLANG+UNITY3D
 
 <br/>
