--- a/_posts/20014-03-02-code.md
+++ b/_posts/20014-03-02-code.md
@@ -6,7 +6,15 @@ hide: true
 sidebar: "<h4>my <a href='https://github.com/felixanya/'>github</a></h4>"
 ---
 
-## Webgame
+## Webgame(策略)
+
+经典三国题材即时战争策略游戏,多人副本即时战役.
+
+[code](https://github.com/felixanya) - [web](https://github.com/felixanya) - January 2011 - Tools: JAVA+PHP+AS
+
+<br/>
+
+## Webgame(RPG)
 
 RPG+SLG的顶级多人在线网页游戏.
 
@@ -16,7 +24,7 @@ RPG+SLG的顶级多人在线网页游戏.
 
 ## 手游
 
-卡牌类手机网络游戏,实时战斗
+卡牌类手机网络游戏,实时战斗.
 
 [code](https://github.com/felixanya) - [web](https://github.com/felixanya) - January 2013 - Tools: GOLANG+UNITY3D
 
