--- a/_posts/2014-03-02-about.md
+++ b/_posts/2014-03-02-about.md
@@ -9,7 +9,7 @@ Programmer,Husband and Striker.
 
 I love my family,my wife,work and life.
 
-My Github hobby projects resume: http://felix.github.io/
+My Github hobby projects resume: http://github.com/felixanya/
 
 
 <link rel="stylesheet" href="/css/cv.css" type="text/css" media="screen, projection" />
